Edited wiki page CR_QuickAddReference through web user interface.

--- a/wiki/CR_QuickAddReference.wiki
+++ b/wiki/CR_QuickAddReference.wiki
@@ -1,54 +1,9 @@
-#summary Replacement for "Add References" dialog which loads quickly.
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_QuickAddReference/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://tv.devexpress.com/CRQuickAddReference.movie http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Screencast.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-= Introduction =
+#summary Moved to GitHub
 
-A plugin to provide a quicker way to add some of the more common assemblies to your project. Loads in < 2 seconds.
+= This Plugin Has Moved =
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_QuickAddReference/Screenshots/QuickAddReference.png
+This plugin and it's source have moved to github.
 
-= Usage =
+The new address for this plugin is [https://github.com/RoryBecker/CR_QuickAddReference https://github.com/RoryBecker/CR_QuickAddReference]
 
-Assuming installation is done correctly, 'Quick Add Reference' should be available as a DXCore action. This action can be bound to a hotkey (I used Ctrl+AltT in testing). 
-
-Triggering QuickAddReference leads to the main "Quick Add Reference" dialog which includes different tabs designed to show you different lists of potential references.
-
-Select one or more references and hit the add button.
-
-== Tabs ==
-Each tab provides a different list of potential references which you can add to the current project.
-=== Solution Tab ===
-The solution tab provides a list of references already in use in one or more of the projects in your solution.
-=== Recent Tab ===
-The recent tab will contain the 20 most recent assemblies added to a project using QuickAddReference. 
-=== Common Tab ===
-This is a user configurable tab which by default contains the following assemblies.
-
- * System.Configuration.dll
- * System.Data.dll
- * System.Data.DataSetExtensions.dll
- * System.Xml.dll
- * System.Xml.Linq.dll
-
-=== Win Tab ===
-This is a user configurable tab which by default contains the following assemblies.
-
- * System.Drawing.dll
- * System.Windows.Forms.dll
-
-=== Web Tab ===
-This is a user configurable tab which by default contains the following assemblies.
-
- * System.Web.dll
- * System.Net.dll
- * System.Web.Extensions.dll
- * System.Web.Services.dll
-
-More tabs will follow.
-
-= Limitations =
- * COM references cannot be added.
- * Project references cannot be added.
-
-= Credits =
-RoryBecker
+The latest release [https://github.com/RoryBecker/CR_QuickAddReference/releases/latest can be found here] 
